feat: init tracker node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ find_package(catkin REQUIRED COMPONENTS
   tf
   cv_bridge
   nav_msgs
+  ar_track_alvar_msgs
+  tf2
 )
 
 ## System dependencies are found with CMake's conventions
@@ -24,7 +26,7 @@ find_package(OpenCV REQUIRED)
 ###################################
 catkin_package(
   INCLUDE_DIRS include
-  CATKIN_DEPENDS roscpp sensor_msgs nav_msgs cv_bridge geometry_msgs std_msgs tf rospy
+  CATKIN_DEPENDS roscpp sensor_msgs nav_msgs cv_bridge geometry_msgs std_msgs tf rospy tf2 ar_track_alvar_msgs
 )
 
 ###########
@@ -38,8 +40,14 @@ include_directories(
 )
 
 add_executable(path_generator_node src/path_generator_node.cpp)
+add_executable(path_tracker_node src/path_tracker_node.cpp)
 
 target_link_libraries(path_generator_node
+  ${catkin_LIBRARIES}
+  ${OpenCV_LIBRARIES}
+)
+
+target_link_libraries(path_tracker_node
   ${catkin_LIBRARIES}
   ${OpenCV_LIBRARIES}
 )
@@ -52,3 +60,6 @@ install(TARGETS path_generator_node
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
+install(TARGETS path_tracker_node
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
