--- a/package.xml
+++ b/package.xml
@@ -57,6 +57,9 @@
   <build_depend>tf</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>nav_msgs</build_depend>
+  <build_depend>tf2</build_depend>
+  <build_depend>ar_track_alvar_msgs</build_depend>
+
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -65,14 +68,20 @@
   <build_export_depend>tf</build_export_depend>
   <build_export_depend>cv_bridge</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
+  <build_export_depend>tf2</build_export_depend>
+  <build_export_depend>ar_track_alvar_msgs</build_export_depend>
+  
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
+  <exec_depend>tf2</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
+  <exec_depend>ar_track_alvar_msgs</exec_depend>
+  
 
 
   <!-- The export tag contains other, unspecified, tags -->
